<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Менеджер паролей</string>
    <string name="menu_item_add">Поиск</string>
    <string name="menu_item_syncsettings">Синхронизация</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_masterpassword">Мастер-пароль</string>
    <string name="menu_item_about">О приложении</string>
    <string name="menu_item_exit">Выход</string>

    <string name="action_item_delete">Удалить</string>

    <string-array name="firstLogin">
        <item>Добро пожаловать в Менеджер паролей HPassword! Судя по всему, Вы запустили приложение в первый раз.</item>
        <item>Ваши данные надежно хранятся в зашифрованном виде.</item>
        <item>Ваши данные синхронизируются на сервере.</item>
        <item>Сейчас Вам будет предложено создать 1 пароль. Запомните 1 пароль для входа в приложение вместо 100!</item>
        <item>У нас нет рекламы! Приятного пользования :)</item>
    </string-array>

    <array name="firstLoginImages">
        <item>@drawable/firstlogin1</item>
        <item>@drawable/firstlogin2</item>
        <item>@drawable/firstlogin3</item>
        <item>@drawable/firstlogin4</item>
        <item>@drawable/firstlogin5</item>
    </array>

    <array name="groupImages">
        <item>@drawable/social_group</item>
        <item>@drawable/email_group</item>
        <item>@drawable/sites_group</item>
        <item>@drawable/pc_group</item>
        <item>@drawable/pin_group</item>
        <item>@drawable/wifi_group</item>
        <item>@drawable/other_group</item>
    </array>

    <array name="iconImages">
        <item>@drawable/pw_email</item>
        <item>@drawable/pw_pc</item>
        <item>@drawable/pw_wifi</item>
    </array>

    <string name="dropbox_about">Dropbox синхронизация позволяет хранить базу с паролями
    в вашем Dropbox аккаунте. Это обеспечивает надежную защиту. Вы можете в любой момент восстановить все ваши пароли.</string>

    <string-array name="navdraw">
        <item>Главная</item>
        <item>Синхронизация</item>
        <item>Настройки</item>
        <item>Мастер-пароль</item>
        <item>О приложении</item>
        <item>Выход</item>
    </string-array>

    <string name="change_master_password">ВАЖНО! Вам нужно запомнить этот пароль: без него войти в приложение невозможно!
    В целях безопасности не предусмотрено возможности восстановления/сброса пароля. Вы можете отправить пароль себе на электронную
    почту, если всё-таки опасаетесь, что потеряете его.</string>

    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>

    <string-array name="random_length">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string-array name="random_length_values">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

</resources>
