<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/add"
            android:orderInCategory="1"
            android:title="@string/menu_item_add"
            android:showAsAction="always"
            android:icon="@android:drawable/ic_menu_search"
            android:actionMenuTextColor="@color/menu_item_white" />

    <item
            android:id="@+id/syncSettings"
            android:orderInCategory="1"
            android:title="@string/menu_item_syncsettings"
            android:showAsAction="never"
            android:onClick="openSyncSettingsActivity"/>

    <item
            android:id="@+id/settings"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:showAsAction="never"
            android:onClick="openSettingsActivity"/>

    <item
            android:id="@+id/masterpassword"
            android:orderInCategory="1"
            android:title="@string/menu_item_masterpassword"
            android:showAsAction="never"
            android:onClick="openMasterPasswordActivity"/>

    <item
            android:id="@+id/about"
            android:orderInCategory="1"
            android:title="@string/menu_item_about"
            android:showAsAction="never"
            android:onClick="onAboutClick"/>

    <item
            android:id="@+id/exit"
            android:orderInCategory="1"
            android:title="@string/menu_item_exit"
            android:showAsAction="never"
            android:onClick="onExitClick"/>

</menu>