<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/add"
            android:orderInCategory="1"
            android:title="@string/action_item_delete"
            android:showAsAction="always"
            android:actionMenuTextColor="@color/menu_item_white"/>

    <item
            android:id="@+id/settings"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:showAsAction="never"/>

    <item
            android:id="@+id/about"
            android:orderInCategory="1"
            android:title="@string/menu_item_about"
            android:showAsAction="never"/>

    <item
            android:id="@+id/exit"
            android:orderInCategory="1"
            android:title="@string/menu_item_exit"
            android:showAsAction="never"
            android:onClick="onExitClick"/>

</menu>