<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/edit"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:icon="@drawable/remove"
            android:showAsAction="always"
            android:onClick="onRemoveMenuClick"/>

    <item
            android:id="@+id/settings"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:showAsAction="never"/>

    <item
            android:id="@+id/about"
            android:orderInCategory="1"
            android:title="@string/menu_item_about"
            android:showAsAction="never"/>

    <item
            android:id="@+id/exit"
            android:orderInCategory="1"
            android:title="@string/menu_item_exit"
            android:showAsAction="never"/>

</menu>